--- a/Views/SendMessagePage.xaml
+++ b/Views/SendMessagePage.xaml
@@ -12,11 +12,12 @@
     <Page.Resources>
         <vm:SendMessageViewModel x:Key="viewModel"/>
     </Page.Resources>
-    <Grid>
+    <Grid DataContext="{StaticResource viewModel}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="6*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="1.7*"/>
+            <RowDefinition Height="0.4*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
@@ -38,27 +39,48 @@
                            Grid.Row="0"/>
                 <TextBox Margin="5,0,5,0"
                          Grid.Column="1"
-                         Grid.Row="0"/>
+                         Grid.Row="0"
+                         Text="{Binding MessageSender}"/>
                 <TextBlock Text="To"
                            Margin="10,0,0,0"
                            Grid.Column="0"
                            Grid.Row="1"/>
                 <TextBox Margin="5,0,5,0"
                          Grid.Column="1"
-                         Grid.Row="1"/>
+                         Grid.Row="1"
+                         Text="{Binding MessageReciever, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </Grid>
-            <TextBox Grid.Row="1"
-                     Margin="5"
-                     Text="Add a subject"/>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0">
+                    <TextBlock Margin="10,0,0,0"
+                           Text="Name"/>
+                    <TextBox Margin="5"
+                         Text="{Binding MessageName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                </StackPanel>
+                <StackPanel Grid.Column="1">
+                    <TextBlock Margin="10,0,0,0"
+                               Text="Subject"/>
+                    <TextBox Margin="5"
+                             Text="{Binding MessageSubject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                </StackPanel>
+            </Grid>
         </Grid>
-        <StackPanel Grid.Row="1">
-            <TextBlock Text="Message:"
-                       Margin="10,0,0,0"/>
-            <RichEditBox Margin="5,0,5,0"/>
-        </StackPanel>
+        <TextBlock Text="Message:"
+                   Grid.Row="1"
+                   Margin="10,0,0,0"/>
+        <TextBox Margin="5,0,5,0"
+                 Grid.Row="2"
+                 HorizontalAlignment="Stretch"
+                 VerticalAlignment="Stretch"
+                 Text="{Binding MessageBody, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         <Button Content="Send"
                 Grid.Row="3"
                 Margin="5"
-                HorizontalAlignment="Right"/>
+                HorizontalAlignment="Right"
+                Command="{Binding SendMessageCommand}"/>
     </Grid>
 </Page>
