--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -16,17 +16,18 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="6*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Margin="10"
                     Grid.Column="0">
             <Button Content="Login"
                     Command="{Binding ShowLoginControlsCommand}"
                     Visibility="{Binding ManagmentButtonsVisibility}"/>
-            <Button Content="Load"
-                    Command="{Binding LoadCommand}"
-                    Visibility="{Binding ManagmentButtonsVisibility}"/>
-            <Button Content="Send"
+            <Button Content="New mail"
                     Command="{Binding SendCommand}"
+                    Visibility="{Binding ManagmentButtonsVisibility}"/>
+            <Button Content="Sync"
+                    Command="{Binding LoadCommand}"
                     Visibility="{Binding ManagmentButtonsVisibility}"/>
             <TextBlock Text="Login:"
                        Margin="0,50,0,0"
@@ -87,35 +88,21 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <Button Content="Sent"
-                        Grid.Column="0"
-                        Visibility="{Binding RightSideControlsVisibility}"/>
+                        Grid.Column="0"/>
                 <Button Content="Favourite"
-                        Grid.Column="1"
-                        Visibility="{Binding RightSideControlsVisibility}"/>
+                        Grid.Column="1"/>
                 <Button Content="Deleted"
-                        Grid.Column="2"
-                        Visibility="{Binding RightSideControlsVisibility}"/>
+                        Grid.Column="2"/>
                 <Button Content="&lt;"
-                        FontSize="30"
                         Grid.Column="3"
-                        Command="{Binding LoadPreviousListOfMessagesCommand}"
-                        Visibility="{Binding RightSideControlsVisibility}"/>
+                        Command="{Binding LoadPreviousListOfMessagesCommand}"/>
                 <Button Content=">"
-                        FontSize="30"
                         Grid.Column="4"
-                        Command="{Binding LoadNextListOfMessagesCommand}"
-                        Visibility="{Binding RightSideControlsVisibility}"/>
-                <Button Content="X"
-                        FontSize="30"
-                        Grid.Column="4"
-                        Background="red"
-                        Command="{Binding CloseMessageCommand}"
-                        Visibility="{Binding MessageBodyControlsVisibility}"/>
+                        Command="{Binding LoadNextListOfMessagesCommand}"/>
             </Grid>
             <ListView Margin="10"
                       ItemsSource="{Binding Messages, Mode=TwoWay}"
                       Grid.Row="1"
-                      Visibility="{Binding RightSideControlsVisibility}"
                       SelectedValue="{Binding SelectedMailMessage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -123,10 +110,111 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+        </Grid>
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="10*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Button Content="X"
+                        Grid.Column="2"
+                        Background="red"
+                        Command="{Binding CloseMessageCommand}"
+                        Visibility="{Binding MessageBodyControlsVisibility}"/>
+            </Grid>
             <uc:MessageBodyControl MessageBody="{Binding SelectedMailMessage.Body}"
                                    Visibility="{Binding MessageBodyControlsVisibility}"
                                    Grid.Row="1"
                                    Margin="10"/>
+            <Grid Grid.Row="1"
+                  Visibility="{Binding SendMessageControlsVisibility}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1.7*"/>
+                    <RowDefinition Height="0.4*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="0.5*"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1.5*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="8*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="From"
+                                   Margin="10,0,0,0"
+                                   Grid.Column="0"
+                                   Grid.Row="0"/>
+                        <TextBox Margin="5,0,5,0"
+                                 Grid.Column="1"
+                                 Grid.Row="0"
+                                 Text="{Binding MessageSender}"/>
+                        <TextBlock Text="To"
+                                   Margin="10,0,0,0"
+                                   Grid.Column="0"
+                                   Grid.Row="1"/>
+                        <TextBox Margin="5,0,5,0"
+                                 Grid.Column="1"
+                                 Grid.Row="1"
+                                 Text="{Binding MessageReciever, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    </Grid>
+                    <Grid Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Grid.Column="0">
+                            <TextBlock Margin="10,0,0,0"
+                                       Text="Name"/>
+                            <TextBox Margin="5"
+                                     Text="{Binding MessageName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        </StackPanel>
+                        <StackPanel Grid.Column="1">
+                            <TextBlock Margin="10,0,0,0"
+                                       Text="Subject"/>
+                            <TextBox Margin="5"
+                                     Text="{Binding MessageSubject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        </StackPanel>
+                    </Grid>
+                </Grid>
+                <TextBlock Text="Message:"
+                           Grid.Row="1"
+                           Margin="10,0,0,0"/>
+                <TextBox Margin="5,0,5,0"
+                         Grid.Row="2"
+                         HorizontalAlignment="Stretch"
+                         VerticalAlignment="Stretch"
+                         Text="{Binding MessageBody, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Content="Cancel"
+                            Grid.Column="0"
+                            Margin="5"
+                            HorizontalAlignment="Left"
+                            Command="{Binding CancelSendingMessageCommand}"/>
+                    <Button Content="Send"
+                            Grid.Column="1"
+                            Margin="5"
+                            HorizontalAlignment="Right"
+                            Command="{Binding SendMessageCommand}"/>
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
