--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -24,7 +24,7 @@
                     Command="{Binding ShowLoginControlsCommand}"
                     Visibility="{Binding ManagmentButtonsVisibility}"/>
             <Button Content="New mail"
-                    Command="{Binding SendCommand}"
+                    Command="{Binding SendMessageViewModel.ShowSendingControlosCommand}"
                     Visibility="{Binding ManagmentButtonsVisibility}"/>
             <Button Content="Sync"
                     Command="{Binding LoadCommand}"
@@ -133,7 +133,7 @@
                                    Grid.Row="1"
                                    Margin="10"/>
             <Grid Grid.Row="1"
-                  Visibility="{Binding SendMessageControlsVisibility}">
+                  Visibility="{Binding SendMessageViewModel.SendMessageControlsVisibility}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1.7*"/>
                     <RowDefinition Height="0.4*"/>
@@ -161,7 +161,7 @@
                         <TextBox Margin="5,0,5,0"
                                  Grid.Column="1"
                                  Grid.Row="0"
-                                 Text="{Binding MessageSender}"/>
+                                 Text="{Binding SendMessageViewModel.MessageSender}"/>
                         <TextBlock Text="To"
                                    Margin="10,0,0,0"
                                    Grid.Column="0"
@@ -169,7 +169,7 @@
                         <TextBox Margin="5,0,5,0"
                                  Grid.Column="1"
                                  Grid.Row="1"
-                                 Text="{Binding MessageReciever, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                 Text="{Binding SendMessageViewModel.MessageReciever, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                     <Grid Grid.Row="1">
                         <Grid.ColumnDefinitions>
@@ -180,13 +180,13 @@
                             <TextBlock Margin="10,0,0,0"
                                        Text="Name"/>
                             <TextBox Margin="5"
-                                     Text="{Binding MessageName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                     Text="{Binding SendMessageViewModel.MessageName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
                         <StackPanel Grid.Column="1">
                             <TextBlock Margin="10,0,0,0"
                                        Text="Subject"/>
                             <TextBox Margin="5"
-                                     Text="{Binding MessageSubject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                                     Text="{Binding SendMessageViewModel.MessageSubject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
                     </Grid>
                 </Grid>
@@ -197,7 +197,7 @@
                          Grid.Row="2"
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Stretch"
-                         Text="{Binding MessageBody, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                         Text="{Binding SendMessageViewModel.MessageBody, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <Grid Grid.Row="3">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
@@ -207,12 +207,12 @@
                             Grid.Column="0"
                             Margin="5"
                             HorizontalAlignment="Left"
-                            Command="{Binding CancelSendingMessageCommand}"/>
+                            Command="{Binding SendMessageViewModel.CancelSendingMessageCommand}"/>
                     <Button Content="Send"
                             Grid.Column="1"
                             Margin="5"
                             HorizontalAlignment="Right"
-                            Command="{Binding SendMessageCommand}"/>
+                            Command="{Binding SendMessageViewModel.SendMessageCommand}"/>
                 </Grid>
             </Grid>
         </Grid>
