--- a/Views/PostClientPage.xaml
+++ b/Views/PostClientPage.xaml
@@ -258,14 +258,20 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Button Content="Cancel"
                             Grid.Column="0"
                             Margin="5"
                             HorizontalAlignment="Left"
                             Command="{Binding SendMessageViewModel.CancelSendingMessageCommand}"/>
-                    <Button Content="Send"
+                    <Button Content="Draft"
                             Grid.Column="1"
+                            Margin="5"
+                            HorizontalAlignment="Center"
+                            Command="{Binding SendMessageViewModel.DraftMessageCommand}"/>
+                    <Button Content="Send"
+                            Grid.Column="2"
                             Margin="5"
                             HorizontalAlignment="Right"
                             Command="{Binding SendMessageViewModel.SendMessageCommand}"/>
